<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="21dp"
    tools:context="screens.SignUp">

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/metropolis_light"
        android:text="@string/sign_up"
        android:textColor="@color/primary_font_color"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/tvUnderSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/metropolis_light"
        android:text="@string/undertext_signup"
        android:textColor="@color/primary_font_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSignUp"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:background="@drawable/custom_edt"
        android:fontFamily="@font/metropolis_light"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/placeholder_color"
        android:textCursorDrawable="@null"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUnderSignUp"
        app:layout_constraintVertical_bias="0.1"
         />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints="false"
        android:background="@drawable/custom_edt"
        android:fontFamily="@font/metropolis_light"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/placeholder_color"
        android:textCursorDrawable="@null"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtName"
        app:layout_constraintVertical_bias="0.026" />

    <EditText
        android:id="@+id/edtMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:background="@drawable/custom_edt"
        android:fontFamily="@font/metropolis_light"
        android:hint="@string/mobile"
        android:inputType="phone"
        android:padding="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/placeholder_color"
        android:textCursorDrawable="@null"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        app:layout_constraintVertical_bias="0.035" />

    <EditText
        android:id="@+id/edtAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:background="@drawable/custom_edt"
        android:fontFamily="@font/metropolis_light"
        android:hint="@string/address"
        android:inputType="text"
        android:padding="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/placeholder_color"
        android:textCursorDrawable="@null"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtMobile"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:background="@drawable/custom_edt"
        android:fontFamily="@font/metropolis_light"
        android:hint="@string/password_login"
        android:inputType="textPassword"
        android:padding="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/placeholder_color"
        android:textCursorDrawable="@null"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtAddress"
        app:layout_constraintVertical_bias="0.051" />

    <EditText
        android:id="@+id/edtCfPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:background="@drawable/custom_edt"
        android:fontFamily="@font/metropolis_light"
        android:hint="@string/confirm_pass"
        android:inputType="textPassword"
        android:padding="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/placeholder_color"
        android:textCursorDrawable="@null"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPassword"
        app:layout_constraintVertical_bias="0.076" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_login"
        android:backgroundTint="@color/main_color"
        android:fontFamily="@font/metropolis_medium"
        android:padding="16dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/edtPassword"
        app:layout_constraintStart_toStartOf="@id/edtCfPassword"
        app:layout_constraintTop_toBottomOf="@id/edtCfPassword"
        app:layout_constraintVertical_bias="0.1" />


    <LinearLayout

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="14sp"
            android:layout_marginEnd="6dp"
            android:fontFamily="@font/metropolis_light"
            android:text="@string/already_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvLogin"
            android:textColor="@color/main_color"
            android:textStyle="bold"
            android:textSize="16sp"
            android:fontFamily="@font/metropolis_medium"
            android:text="@string/log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>