<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="21dp"
    tools:context="screens.login">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/metropolis_light"
        android:text="@string/login_getting_started"
        android:textColor="@color/primary_font_color"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/tvUnderLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/metropolis_light"
        android:text="@string/text_under_login_screen"
        android:textColor="@color/primary_font_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogin"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:textSize="14sp"
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:background="@drawable/custom_edt"
        android:fontFamily="@font/metropolis_light"
        android:hint="@string/email_login"
        android:inputType="textEmailAddress"
        android:padding="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/placeholder_color"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUnderLogin"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:textSize="14sp"
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:background="@drawable/custom_edt"
        android:fontFamily="@font/metropolis_light"
        android:hint="@string/password_login"
        android:inputType="textPassword"
        android:padding="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/placeholder_color"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/edtEmail"
        app:layout_constraintStart_toStartOf="@id/edtEmail"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_login"
        android:backgroundTint="@color/main_color"
        android:fontFamily="@font/metropolis_medium"
        android:padding="16dp"
        android:text="@string/login_getting_started"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/edtPassword"
        app:layout_constraintStart_toStartOf="@id/edtPassword"
        app:layout_constraintTop_toBottomOf="@id/edtPassword"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/tvForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/metropolis_regular"
        android:text="@string/forgot_pass"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/tvOrLoginAnother"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/metropolis_regular"
        android:text="@string/or_login_with"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPass"
        app:layout_constraintVertical_bias="0.1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoginWithFacebook"
        app:iconGravity="textStart"
        app:iconPadding="20dp"
        app:icon="@drawable/ic_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_login"
        android:fontFamily="@font/metropolis_regular"
        android:padding="10dp"
        android:text="@string/login_with_facebook"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:backgroundTint="@color/blue_facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/tvOrLoginAnother"
        app:layout_constraintVertical_bias="0.08" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoginWithGoogle"
        app:iconGravity="textStart"
        app:iconPadding="20dp"
        app:icon="@drawable/ic_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_login"
        android:fontFamily="@font/metropolis_regular"
        android:padding="10dp"
        android:text="@string/login_with_facebook"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:backgroundTint="@color/red_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btnLoginWithFacebook"
        app:layout_constraintStart_toStartOf="@id/btnLoginWithFacebook"
        app:layout_constraintTop_toBottomOf="@id/btnLoginWithFacebook"
        app:layout_constraintVertical_bias="0.08" />
    <LinearLayout

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:textSize="14sp"
        android:layout_marginEnd="6dp"
        android:fontFamily="@font/metropolis_light"
        android:text="@string/no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textColor="@color/main_color"
        android:textStyle="bold"
        android:textSize="16sp"
        android:fontFamily="@font/metropolis_medium"
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>