<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="screens.ResetPassword">
    <TextView
        android:id="@+id/tvResetPassword"
        android:textStyle="bold"
        android:textSize="30sp"
        android:fontFamily="@font/metropolis_light"
        android:textColor="@color/primary_font_color"
        android:textAlignment="center"
        android:text="@string/reset_pass"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:letterSpacing="0.02"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvDesResetPass"
        android:textSize="14sp"
        android:fontFamily="@font/metropolis_light"
        android:textColor="@color/primary_font_color"
        android:textAlignment="center"
        android:text="@string/des_reset_pass"
        android:lineHeight="20dp"
        android:letterSpacing="0.02"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvResetPassword"
        app:layout_constraintEnd_toEndOf="@id/tvResetPassword"
        app:layout_constraintTop_toBottomOf="@id/tvResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:targetApi="p" />

    <EditText
        android:textSize="14sp"
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:background="@drawable/custom_edt"
        android:fontFamily="@font/metropolis_light"
        android:hint="@string/email_login"
        android:inputType="textEmailAddress"
        android:padding="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/placeholder_color"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDesResetPass"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_login"
        android:backgroundTint="@color/main_color"
        android:fontFamily="@font/metropolis_medium"
        android:padding="16dp"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/edtEmail"
        app:layout_constraintStart_toStartOf="@id/edtEmail"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        app:layout_constraintVertical_bias="0.05" />
</androidx.constraintlayout.widget.ConstraintLayout>