<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="screens.OTP_Screen">

    <TextView
        android:id="@+id/tvOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/metropolis_light"
        android:letterSpacing="0.02"
        android:lineHeight="40dp"
        android:text="@string/text_otp_screen"
        android:textAlignment="center"
        android:textColor="@color/primary_font_color"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/tvDesOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/metropolis_light"
        android:letterSpacing="0.04"
        android:lineHeight="20dp"
        android:text="@string/des_reset_pass"
        android:textAlignment="center"
        android:textColor="@color/primary_font_color"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tvOtp"
        app:layout_constraintStart_toStartOf="@id/tvDesOtp"
        app:layout_constraintTop_toBottomOf="@id/tvOtp"
        app:layout_constraintVertical_bias="0.05"
        tools:targetApi="p" />

    <in.aabhasjindal.otptextview.OtpTextView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/black_google"
        app:height="60dp"
        app:hide_otp="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tvDesOtp"
        app:layout_constraintStart_toStartOf="@id/tvDesOtp"
        app:layout_constraintTop_toBottomOf="@id/tvDesOtp"
        app:layout_constraintVertical_bias="0.1"
        app:length="4"
        app:otp_box_background_active="@drawable/custom_otp_active"
        app:otp_box_background_inactive="@drawable/custom_otp_inactive"
        app:otp_box_background_error="@drawable/custom_otp_error"
        app:otp_box_background_success="@drawable/custom_otp_success"
        app:otp_text_size="24dp"
        app:width="60dp" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_login"
        android:backgroundTint="@color/main_color"
        android:fontFamily="@font/metropolis_medium"
        android:padding="16dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/otp_view"
        app:layout_constraintStart_toStartOf="@id/otp_view"
        app:layout_constraintTop_toBottomOf="@id/otp_view"
        app:layout_constraintVertical_bias="0.05" />

    <LinearLayout
        app:layout_constraintVertical_bias="0.04"
        app:layout_constraintTop_toBottomOf="@id/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="14sp"
            android:layout_marginEnd="6dp"
            android:fontFamily="@font/metropolis_light"
            android:text="@string/didn_t_recieve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvResendOtp"
            android:textColor="@color/main_color"
            android:textStyle="bold"
            android:textSize="15sp"
            android:fontFamily="@font/metropolis_medium"
            android:text="@string/click_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>