<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:weightSum="10"
    tools:context="screens.getting_started_screen">
    <FrameLayout
        android:id="@+id/image"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintWidth_percent="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleX="1.16"
            android:scaleY="1.16"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            android:src="@drawable/orange_top_getting_started" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="30dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            app:srcCompat="@drawable/logo_getting_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>
    <TextView
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.9"
        android:letterSpacing="0.05"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/textGettingstarted"
        android:textColor="@color/secondary_font_color"
        android:textSize="13sp"
        android:textAlignment="center"
        android:text="@string/text_getting_started"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginGettingStarted"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintTop_toBottomOf="@id/textGettingstarted"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:padding="15dp"
        android:textAllCaps="false"
        android:layout_margin="20dp"
        android:textSize="18sp"
        android:text="@string/login_getting_started"
        android:backgroundTint="@color/main_color"
        android:background="@drawable/custom_button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        app:layout_constraintTop_toBottomOf="@id/loginGettingStarted"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/main_color"
        android:padding="15dp"
        android:textAllCaps="false"
        app:layout_constraintVertical_bias="0.1"
        android:layout_marginStart="20dp"
        android:id="@+id/createAccountGettingStarted"
        android:layout_marginEnd="20dp"
        android:textSize="18sp"
        android:text="@string/create_an_account"
        android:background="@drawable/custom_button_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:background="@drawable/custom_under_bottom"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintTop_toBottomOf="@id/createAccountGettingStarted"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:layout_height="4dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>